# blendiff

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
blendiff/: __init__.py
blendiff/cli/: __init__.py  __main__.py  api.py
blendiff/data_model/: __init__.py  conflict.py  constraint_diff.py  custom_prop_diff.py  diff.py  driver_diff.py  fcurve_diff.py  material.py  nla_diff.py  parent_diff.py  scene.py
blendiff/diff_engine/: __init__.py  camera_light_diff.py  constraint_diff.py  custom_prop_diff.py  diff_engine.py  driver_diff.py  fcurve_diff.py  material_diff.py  mesh_diff.py  modifier_diff.py  nla_diff.py  parent_diff.py  render_diff.py  world_diff.py
blendiff/export/: __init__.py  html_exporter.py
blendiff/extractor/: __init__.py  camera_light_extractor.py  constraint_extractor.py  custom_prop_extractor.py  driver_extractor.py  fcurve_extractor.py  material_extractor.py  mesh_extractor.py  modifier_extractor.py  nla_extractor.py  parent_extractor.py  render_extractor.py  scene_extractor.py  world_extractor.py
blendiff/merge_engine/: __init__.py  applier.py  merge_engine.py
blendiff/serializer/: __init__.py  scene_serializer.py
blendiff/storage/: __init__.py  sidecar.py
blendiff/ui/: __init__.py  merge_panel.py  (+2 more)
docs/: architecture.md  ci_example.yml
scripts/: example_output.py
tests/: test_camera_light_diff.py  test_cli_api.py  test_constraint_diff.py  test_custom_prop_diff.py  test_data_model.py  test_diff_engine.py  test_driver_diff.py  test_fcurve_diff.py  test_git_hash.py  test_html_exporter.py  test_material_diff.py  test_merge_engine.py  test_mesh_diff.py  test_modifier_diff.py  test_nla_diff.py  test_parent_diff.py  test_render_diff.py  test_serializer.py  test_sidecar.py  test_world_diff.py
