[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blendiff"
version = "0.4.0"
description = "Semantic diff, snapshot history, and assisted merge for Blender .blend files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vishrut", email = "" }]
requires-python = ">=3.10"
keywords = ["blender", "diff", "3d", "vfx", "pipeline", "addon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Version Control",
]

# Pure-Python core only — no bpy required
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
blendiff = "blendiff.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/Vishrut2403/blendiff"
Repository = "https://github.com/Vishrut2403/blendiff"
"Bug Tracker" = "https://github.com/Vishrut2403/blendiff/issues"

[tool.hatch.build.targets.wheel]
# Only ship the pure-Python core — exclude bpy-dependent ui/ and extractor/
packages = ["blendiff"]
exclude = [
    "blendiff/ui",
    "blendiff/extractor",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "*.pyc",
    "blendiff.zip",
    "scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]